// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Component > matches snapshot for authorized user 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="container"
    >
      <div
        class="header__wrapper"
      >
        <div
          class="header__left"
        >
          <a
            class="header__logo-link"
            href="/"
          >
            <img
              alt="6 cities logo"
              class="header__logo"
              height="41"
              src="img/logo.svg"
              width="81"
            />
          </a>
        </div>
        <nav
          class="header__nav"
        >
          <ul
            class="header__nav-list"
          >
            <li
              class="header__nav-item user"
              style="cursor: pointer;"
            >
              <div
                class="header__nav-link header__nav-link--profile"
              >
                <div
                  class="header__avatar-wrapper user__avatar-wrapper"
                >
                  <img
                    alt="avatar"
                    class="user__avatar"
                    src="avatar.jpg"
                  />
                </div>
                <span
                  class="header__user-name user__name"
                >
                  test@example.com
                </span>
                <span
                  class="header__favorite-count"
                >
                  2
                </span>
              </div>
            </li>
            <li
              class="header__nav-item"
              style="cursor: pointer;"
            >
              <span
                class="header__nav-link"
              >
                <span
                  class="header__signout"
                >
                  Sign out
                </span>
              </span>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header Component > matches snapshot for non-authorized user 1`] = `
<div>
  <header
    class="header"
  >
    <div
      class="container"
    >
      <div
        class="header__wrapper"
      >
        <div
          class="header__left"
        >
          <a
            class="header__logo-link"
            href="/"
          >
            <img
              alt="6 cities logo"
              class="header__logo"
              height="41"
              src="img/logo.svg"
              width="81"
            />
          </a>
        </div>
        <nav
          class="header__nav"
        >
          <ul
            class="header__nav-list"
          >
            <li
              class="header__nav-item"
            >
              <a
                class="header__nav-link"
                href="/login"
              >
                <span
                  class="header__signout"
                >
                  Sign in
                </span>
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </header>
</div>
`;
